<resources>
    <string name="app_name">quickdoro</string>
    <string name="tomato_clock_description">Image of a clock in the shape of a tomato.</string>
    <string name="click_start">Click anywhere to begin!</string>
    <string name="focus">It\'s time to <b>FOCUS</b>!</string>
    <string name="relax">It\'s time to <b>RELAX</b>!</string>
    <string name="stop">Stop!</string>
    <string name="start">Start!</string>
    <string name="minutes">minute(s)</string>
    <string name="timer_break">Timer (Break):</string>
    <string name="timer_study">Timer (Study):</string>
    <string name="task_goes_here">Task goes here!</string>
    <string name="add_task">Add task</string>
    <string name="del_done">del done</string>
    <string name="placeholder">...</string>
    <string name="todolist">to-do list</string>
</resources>